src/css/main.css
* {
  color: #e6eaf2;
  overflow: hidden;
  font-size: 12px;
  letter-spacing: 0.9px;
}

html, body {
  background-color: #202630;
  margin: 0 auto;
}

.header {
  background-color: #171c23;
  padding: 5px;
  font-weight: bold;
  text-align: center;
  font-family: 'Roboto', sans-serif;
  color: #c5d3e8;
  font-size: 12px;
  letter-spacing: 1.8px;
  text-transform: uppercase;
}

.header a {
  -webkit-app-region: no-drag
}

table {
  border-collapse: collapse;
}

table td.shrink {
    white-space: nowrap;
}

table td.expand {
    width: 99%;
}

table td.top {
    vertical-align: top;
}

.entries .entry {
  font-family: 'Roboto', sans-serif;
}

.entries .entry .title {
  border-top: 1px solid #303a4c;
  border-bottom: 1px solid #303a4c;
  background-color: #272f3d;
  padding: 0px 5px 3px 5px;
}

.entries .entry .title span {
  padding: 0px 0px 0px 5px;
  font-weight: bold;
}

.entries .entry .title i {
  vertical-align: middle;
}

.entries .entry img.icon {
  height: 20px;
  width: auto;
  vertical-align: middle;
}

.entries .entry .content {
  background-color: #202630;
  padding: 3px 5px 3px 5px;
  width: 100%;
  height: 100%;
}

.entries .entry .content table {
    margin: 0 auto;
}

.entries .entry .content table td {
    text-align: center;
}

.entries .entry .content svg {
    margin: 5px 0px 0px 0px;
}

.entries .entry .content img.left {
  margin: 0px 5px 0px 0px;
}

.entries .entry .content img.right {
  margin: 0px 0px 0px 5px;
}

.entries .entry table td.arrow {
    padding: 3px 8px 0px 8px;
}

